Missing backdrop filter on mobile safari solved

--- a/home.css
+++ b/home.css
@@ -231,6 +231,7 @@ nav ul {
 #topBar.scrolled{
     background-color: var(--bg-glass);
     box-shadow: 0 1rem 2rem var(--bg-glass-shadow);
+    -webkit-backdrop-filter: blur(.4rem);
     backdrop-filter: blur(.4rem);
     z-index: 9;
 }
@@ -516,6 +517,7 @@ ul.big-list{
     overflow: hidden;
     background-color: var(--bg-glass);
     box-shadow: 0 1rem 2rem var(--bg-glass-shadow);
+    -webkit-backdrop-filter: blur(.4rem);
     backdrop-filter: blur(.4rem);
     border-radius: 1rem;
     width: max(65rem,100%);
@@ -568,6 +570,7 @@ ul.big-list{
     border-radius: 1rem;
     background-color: var(--bg-glass);
     box-shadow: 0 1rem 2rem var(--bg-glass-shadow);
+    -webkit-backdrop-filter: blur(.4rem);
     backdrop-filter: blur(.4rem);
     display: inline-flex;
     align-items: center;
@@ -695,6 +698,7 @@ ul.big-list{
         right: -100%;
         background-color: var(--bg-glass);
         box-shadow: 0 1rem 2rem var(--bg-glass-shadow);
+        -webkit-backdrop-filter: blur(.4rem);
         backdrop-filter: blur(.4rem);
         z-index:11;
     }
